--- a/config_properties.json
+++ b/config_properties.json
@@ -4,7 +4,7 @@
   "verboseFlag": false,
   "debugFlag": false,
   "prodFlag": false,
-  "kamusiList": ["dsa_dictionary.json", "tuki_kamusi.json", "tuki_english.json"],
+  "kamusiList": ["data/dsa_dictionary.json", "data/tuki_kamusi.json", "data/tuki_english.json"],
   "methaliList": ["data/methali_kamusi.json"],
-  "testList": ["tempdict.json"]
+  "testList": ["data/tempdict.json"]
 }
