--- a/config_properties.json
+++ b/config_properties.json
@@ -5,6 +5,6 @@
   "debugFlag": false,
   "prodFlag": false,
   "kamusiList": ["data/dsa_dictionary.json", "data/tuki_kamusi.json", "data/tuki_english.json", "data/swahili-etymology.json"],
-  "methaliList": ["data/methali_kamusi.json"],
+  "methaliList": ["data/methali_kamusi.json", "data/kauli_data.json"],
   "testList": ["data/tempdict.json"]
 }
